<resources>
    <string name="app_name">Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="create_account">Create Account,</string>
    <string name="sign_up_to_get_started">Sign up to get started!</string>
    <string name="name">Name</string>
    <string name="url">Url</string>
    <string name="email">Email</string>
    <string name="text">Text</string>
    <string name="edit">Edit</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="update">Update</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="i_m_already_a_member_sign_in">I\'m already a member, Sign In</string>
</resources>